2021-01-01 Marek M. Cel <marekcel@marekcel.pl>
    
    * R44 FDM minor changes
    
    * version number increment
    
    * aerodynamic characteristics relative to angles expressed in degrees



2020-12-26 Marek M. Cel <marekcel@marekcel.pl>
    
    * about dialog



2020-12-25 Marek M. Cel <marekcel@marekcel.pl>
    
    * XML reader functions rteferences changed to pointers
    
    * F-35 aerodynamics leading edge flaps characteristics



2020-12-20 Marek M. Cel <marekcel@marekcel.pl>
    
    * unit tests



2020-12-19 Marek M. Cel <marekcel@marekcel.pl>
    
    * automatic unit tests building and running scripts
    
    * main rotor model flapping coefficients formula



2020-12-12 Marek M. Cel <marekcel@marekcel.pl>
    
    * unit tests
    
    * quaternion derivative with adjoin parameters constrain



2020-12-05 Marek M. Cel <marekcel@marekcel.pl>

    * comments
    
    * unit tests



2020-11-21 Marek M. Cel <marekcel@marekcel.pl>

    * FDM sys renamed ctrl
    
    * data relative path changed
    
    * Singleton, Log and Path classes put into sim module
    
    * airports lighths controls fix



2020-11-15 Marek M. Cel <marekcel@marekcel.pl>

    * landing gear static friction model fix



2020-11-14 Marek M. Cel <marekcel@marekcel.pl>

    * unit tests
    
    * comments
    
    * FDM refactorization



2020-10-10 Marek M. Cel <marekcel@marekcel.pl>

    * oscillations analysis class



2020-10-03 Marek M. Cel <marekcel@marekcel.pl>

    * unit tests
    
    * winch launcher model
    
    * input data as data referneces
    
    * wind



2020-09-27 Marek M. Cel <marekcel@marekcel.pl>

    * wing runners model
    
    * Geom class with intersections common functions
    
    * F-35 FDM



2020-09-19 Marek M. Cel <marekcel@marekcel.pl>

    * PW-5 FDM
    
    * CGI new airbrakes



2020-09-05 Marek M. Cel <marekcel@marekcel.pl>

    * cylinder head temperature
    
    * FDM wrapper
    
    * Matrix3x3 items referneces
    