@@ -5,6 +5,8 @@
     * version number increment
     
     * aerodynamic characteristics relative to angles expressed in degrees
+    
+    * F-35 landing gear aerodynamic characteristics
 
 
 
